--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@htmlacademy/cra-template-typescript": "2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1"
   },
@@ -43,6 +44,7 @@
     "@testing-library/user-event": "12.8.0",
     "@types/faker": "5.5.8",
     "@types/jest": "^26.0.15",
+    "@types/leaflet": "^1.7.10",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.0",
@@ -50,6 +52,7 @@
     "axios-mock-adapter": "1.19.0",
     "eslint-config-htmlacademy": "^4.1.0",
     "faker": "5.5.3",
+    "leaflet": "^1.8.0",
     "redux-devtools-extension": "2.13",
     "typescript": "^4.1.2"
   }
